--- a/slides/lecture4.qmd
+++ b/slides/lecture4.qmd
@@ -1,18 +1,25 @@
 ---
 title: "Scatterplot Smoothing"
+
+execute:
+  cache: false
 ---
 
 {{< include _common.qmd >}}
 
 ## Today
 
-### Nearest neighbors
+### Nearest Neighbors
 
 Simple algorithm for nonparametric smoothing.
+
+. . .
 
 ### Smoothing Splines
 
 A generalization of polynomial regression.
+
+. . .
 
 ### S3 Smoother
 
@@ -31,7 +38,7 @@ nuuk <- read_table(
   mutate(Temperature = Temperature / 10) |>
   filter(Year > 1866)
 
-nuuk_year <- group_by(nuuk, Year) %>%
+nuuk_year <- group_by(nuuk, Year) |>
   summarise(
     Temperature = mean(Temperature),
     Median = median(Temperature),
@@ -42,95 +49,104 @@ n <- nrow(nuuk_year)
 ```
 
 ```{r}
-library(tidyverse)
-
-p <- ggplot(nuuk_year, aes(Year, Temperature)) +
+#| fig-cap: Annual average temperature in Nuuk, Greenland
+#| fig-width: 4
+nuuk_plot <- ggplot(nuuk_year, aes(Year, Temperature)) +
   geom_point()
-p
+nuuk_plot
 ```
 
-Data available [here](../data/nuuk.dat.txt).
-
-::: {.notes}
-
-- Annual average temperature in Nuuk, Greenland
-
-:::
+Data is available [here](../data/nuuk.dat.txt).
 
 ## Nearest Neighbor Estimation
 
-Data: $(x_1, y_1), \ldots, (x_n, y_n)$
+Our data is of the form
+$$
+  (x_1, y_1), \ldots, (x_n, y_n).
+$$
 
-The $k$ nearest neighbor smoother in $x$ is defined as
-$$\hat{f}(x) = \frac{1}{k} \sum_{j \in N(x)} y_j$$ where $N(x)$ is the set of
-indices for the $k$ nearest neighbors of $x$.
+\medskip\pause
 
-. . .
+The $k$-nearest neighbor smoother in $x$ is defined as
+$$
+  \hat{f}(x) = \frac{1}{k} \sum_{j \in N(x)} y_j
+$$
+where $N(x)$ is the set of indices for the $k$ nearest neighbors of $x$.
 
-This is an estimator of $$f(x) = E(Y \mid X = x).$$
+\medskip\pause
 
-::: {.notes}
+This is an estimator of
+$$
+  f(x) = E(Y \mid X = x).
+$$
 
-- $N(x)$ is the neighborhood of $x$.
-
-:::
+\pdfpcnote{
+ N(x) is the neighborhood of x.
+}
 
 ## Nearest Neighbor Estimation
 
-The estimator in $x_i$ is $$\hat{f}_i = \frac{1}{k} \sum_{j \in N_i} y_j$$ where
-$N_i = N(x_i)$. --
+The estimator in $x_i$ is
+$$
+  \hat{f}_i = \frac{1}{k} \sum_{j \in N_i} y_j
+$$
+where $N_i = N(x_i)$.
+
+\medskip\pause
 
 $S_{ij} = \frac{1}{k} \mathbf{1}_{N_i}(j)$, $\mathbf{S} = (S_{ij})$, and
-$$\hat{\mathbf{f}} = (\hat{f}_i) = \mathbf{S} \mathbf{y}.$$
+$$
+  \hat{\bm{f}} = (\hat{f}_i) = \mathbf{S} \mathbf{y}.
+$$
 
 . . .
 
-$\hat{\mathbf{f}}$ is an estimator of the vector $(f(x_i))$.
+$\hat{\bm{f}}$ is an estimator of the vector $(f(x_i))$.
 
-::: {.notes}
-
-- The vector $\hat{f}$ can be computed as a linear function of $\mathbf{y}$.
-- $\mathbf{S}$ is a relatively sparse $n \times n$ matrix.
-
-:::
+\pdfpcnote{
+  The vector f̂ can be computed as a linear function of y.
+  S is a relatively sparse n × n matrix.
+}
 
 ## Linear Smoothers
 
 $(f(x_i))$ of the form $\mathbf{S} \mathbf{y}$ for a _smoother matrix_
 $\mathbf{S}$ is called a _linear smoother_.
 
-. . .
+\pause\medskip
 
 The $k$ nearest neighbor smoother is a simple example of a linear smoother that
 works for $x$-values in any metric space.
 
-. . .
+\pause\medskip
 
 The representation of a linear smoother as a matrix-vector product,
-$$\mathbf{S} \mathbf{y}$$ is theoretically useful, but often not the best way to
-actually compute $\hat{\mathbf{f}}$.
+$$\mathbf{S} \mathbf{y}$$
+is theoretically useful, but often not the best way to actually compute
+$\hat{\mathbf{f}}$.
 
 ## Running Mean
 
 When $x_i \in \mathbb{R}$ we can sort data according to $x$-values and then use
 a _symmetric_ neighbor definition:
 
-$$N_i = \{i - (k - 1) / 2, i - (k - 1) / 2 + 1, \ldots, i - 1 , i, i + 1, \ldots,   i + (k - 1) / 2\}$$
-
+$$
+  N_i = \{i - (k - 1) / 2, i - (k - 1) / 2 + 1, \ldots, i - 1 , i, i + 1, \ldots,   i + (k - 1) / 2\}
+$$
 (for $k$ odd.)
 
-. . .
+\pause\medskip
 
 This simplifies computations: we don't need to keep track of metric comparisons,
 only the order matters.
 
-::: {.notes}
-
+\pdfpcnote{
 - Symmetric neighborhoods do not take distance into account.
-- Only need to sort
-- Only order matters
 
-:::
+- Only need to sort
+
+- Only order matters
+}
 
 ## Running Mean (Naive Implementation)
 
@@ -151,16 +167,16 @@ run_mean_naive <- function(y, k) {
 }
 ```
 
-::: {.notes}
-
+\pdfpcnote{
 - Can speed this up by replacing mean computation
-
-:::
+}
 
 ## Running Mean
 
 Implementation (assuming $y$ is sorted) using the identity
-$$\hat{f}_{i+1} = \hat{f}_{i} - \frac{y_{i - (k-1)/2}}{k} + \frac{y_{i + (k + 1)/2}}{k}.$$
+$$
+  \hat{f}_{i+1} = \hat{f}_{i} - \frac{y_{i - (k-1)/2}}{k} + \frac{y_{i + (k + 1)/2}}{k}.
+$$
 
 . . .
 
@@ -181,24 +197,24 @@ run_mean <- function(y, k) {
 }
 ```
 
-::: {.notes}
+\pdfpcnote{
+  Ensures $k$ is odd
+}
 
-- Ensures $k$ is odd
-
-:::
 
 ## Visualization
 
-```{r nuuk-NN-plot2, warning=FALSE, fig.width = 10, fig.height = 5}
+```{r nuuk-NN-plot2}
+#| warning: false
+#| fig-width: 5.5
+#| fig-height: 3
 f_hat <- run_mean(nuuk_year$Temperature, 11)
-p + geom_line(aes(y = f_hat), color = "blue")
+nuuk_plot + geom_line(aes(y = f_hat), color = "blue")
 ```
 
-::: {.notes}
-
-- Takes 5 to the right and 5 to the left
-
-:::
+\pdfpcnote{
+  Takes 5 to the right and 5 to the left
+}
 
 ## `stats::filter()`
 
@@ -217,13 +233,10 @@ options(digits = op$digits)
 . . .
 
 ```{r runmean-test}
-library(testthat)
+f_hat <- run_mean(nuuk_year$Temperature, 11)
+f_hat_filter <- stats::filter(nuuk_year$Temperature, rep(1 / 11, 11))
 
-test_that("filter() and run_mean() work the same", {
-  f_hat <- run_mean(nuuk_year$Temperature, 11)
-  f_hat_filter <- stats::filter(nuuk_year$Temperature, rep(1 / 11, 11))
-  expect_equivalent(f_hat, as.numeric(f_hat_filter))
-})
+all.equal(f_hat, as.numeric(f_hat_filter))
 ```
 
 . . .
@@ -231,16 +244,20 @@ test_that("filter() and run_mean() work the same", {
 ^[There is a `filter()` function in the **dplyr** package (part of the
 tidyverse), so look out for name clashes. Safest to call `stats::filter()`.]
 
-::: {.notes}
+\pdfpcnote{
+  - filter(): general linear filtering function
 
-- `filter()` general linear filtering function
-- Here, `rep(1, /11, 11)` are MA coefficients
-
-:::
+  - `rep(1, /11, 11)` are MA coefficients
+}
 
 ## Benchmarking (Using `bench::press()`)
 
-```{r runMeanBench, echo=FALSE, warning=FALSE, message = FALSE, cache = TRUE, fig.height = 5.5, fig.width = 12}
+```{r runMeanBench}
+#| echo: false
+#| warning: false
+#| message: false
+#| fig-width: 5.5
+#| fig-height: 3.5
 nn_bench <- bench::press(
   n = c(512, 1024, 2048, 4196),
   {
@@ -266,47 +283,6 @@ The Matrix-vector multiplication is $O(n^2)$.
 
 The two other algorithms are $O(n)$.
 
-## Exercise
-
-$\mathbf{S}$ is a sparse matrix but it is stored in a dense format currently.
-
-**Note:** The following is **not** the real $\mathbf{S}$. It is just used for
-illustration.
-
-```{r ex-sparse, warning = FALSE}
-k <- 11
-y <- rnorm(n)
-w <- c(rep(1, k * n), rep(0, n * (n - k)))
-S <- matrix(w, n, n, byrow = TRUE)
-```
-
-Use the [Matrix package](https://CRAN.R-project.org/package=Matrix) to convert
-$\mathbf{S}$ to a sparse format using `Matrix::Matrix(S, sparse = TRUE)` and
-then benchmark the sparse multiplication against the dense one. Parameterize the
-benchmark with $n$ and $k$.
-
-Don't include the time used to construct the matrix in the benchmark.
-
-```{r ex-sparse-result, echo = FALSE, message = FALSE, warning = FALSE, fig.width = 12, fig.height = 7, cache = TRUE}
-sparse_bench <- bench::press(
-  n = c(512, 1024, 4196),
-  k = c(10, 100),
-  {
-    k <- 11
-    y <- rnorm(n)
-    w <- c(rep(1, k * n), rep(0, n * (n - k)))
-    S <- matrix(w, n, n, byrow = TRUE)
-    S_sparse <- Matrix::Matrix(S, sparse = TRUE)
-    bench::mark(
-      S %*% y,
-      S_sparse %*% y,
-      check = FALSE
-    )
-  }
-)
-
-plot(sparse_bench)
-```
 
 ## Mean-Squared Error
 
@@ -349,11 +325,9 @@ $$\hat{f}^{-i}_i = \sum_{j \neq i} \frac{S_{ij}y_j}{1 - S_{ii}}.$$
 For many smoothing procedures with a natural "out-of-sample" prediction method,
 the identity above holds.
 
-::: {.notes}
-
-- Can for running mean in principle compute this without leaving anything out.
-
-:::
+\pdfpcnote{
+Can for running mean in principle compute this without leaving anything out.
+}
 
 ## LOOCV
 
@@ -409,89 +383,83 @@ ggplot(tibble(k, cv_error), aes(k, cv_error)) +
 The optimal choice of $k$ is `r k_opt`.
 
 ```{r nuuk-NN-plot3, warning=FALSE, fig.width = 9, fig.height = 5, echo = FALSE}
-p + geom_line(aes(y = run_mean(nuuk_year$Temperature, k_opt)), color = "blue")
+nuuk_plot +
+  geom_line(aes(y = run_mean(nuuk_year$Temperature, k_opt)), color = "blue")
 ```
 
 ## Wiggliness
 
-- Running mean is wiggly!
-- We can use kernel smoothing (as we did last week) to fix this
-- But another idea is to use smoothing splines instead.
+The running mean is wiggly!
+
+\pause\medskip
+
+We can use kernel smoothing (as we did last week) to fix this
+
+\pause\medskip
+
+But another idea is to use \alert{smoothing splines} instead.
 
 # Smoothing Splines
 
 ## Smoothing Splines
 
 The minimizer of
-$$L(f) = \sum_{i=1}^n (y_i - f(x_i))^2 + \lambda \underbrace{\int f''(z)^2 \mathrm{d} z}_{\|f''\|_2^2}$$
-is a **cubic spline** --
-
-with **knots** in the data points $x_i$, that is, a function
-$$f = \sum_j \beta_j \varphi_j$$ where $\varphi_j$ is a basis function for the
-$n$-dimensional space of such splines.
+$$
+  L(f) = \sum_{i=1}^n (y_i - f(x_i))^2 + \lambda \underbrace{\int f''(z)^2 \mathrm{d} z}_{\|f''\|_2^2}
+$$
+is a **cubic spline** with **knots** in the data points $x_i$, that is, a
+function
+$$
+  f = \sum_j \beta_j \varphi_j
+  $$
+where $\varphi_j$ is a basis function for the $n$-dimensional space of such
+splines.
 
 . . .
 
 Cubic splines are piecewise degree 3 polynomials in between knots.
 
-::: {.notes}
-
+\pdfpcnote{
 - Without penalty term, any interpolating function would work well.
 - Penalty term penalizes solutions with large second derivatives (in norm).
 - **Derive the minimizer on the blackboard!**
-
-:::
+}
 
 ### Loss Function
 
-In vector notation $$\hat{\mathbf{f}} = \boldsymbol{\Phi}\hat{\beta}$$ with
-$\boldsymbol{\Phi}_{ij} = \varphi_j(x_i)$,
-
-and
-
+In vector notation
 $$
-\begin{aligned} L(\mathbf{f}) & = (\mathbf{y} - \mathbf{f})^T (\mathbf{y} -
-\mathbf{f}) + \lambda \|f''\|\_2^2 \\ & = ( \mathbf{y} -
-\boldsymbol{\Phi}\beta)^T (\mathbf{y} - \boldsymbol{\Phi}\beta) + \lambda
-\beta^T \mathbf{\Omega} \beta \end{aligned}
+  \hat{\mathbf{f}} = \boldsymbol{\Phi}\hat{\beta}
 $$
-
+with $\boldsymbol{\Phi}_{ij} = \varphi_j(x_i)$, and
+$$
+\begin{aligned} 
+  L(\mathbf{f}) & = (\mathbf{y} - \mathbf{f})^T (\mathbf{y} - \mathbf{f}) + \lambda \|f''\|_2^2 \\ 
+                & = (\mathbf{y} - \boldsymbol{\Phi}\beta)^T (\mathbf{y} - \boldsymbol{\Phi}\beta) + \lambda \beta^T \mathbf{\Omega} \beta
+\end{aligned}
+$$
 with
-
 $$
-\mathbf{\Omega}_{jk} = \int \varphi_j''(z) \varphi_k''(z) \mathrm{d}z.
+  \mathbf{\Omega}_{jk} = \int \varphi_j''(z) \varphi_k''(z) \mathrm{d}z.
 $$
 
-::: {.notes}
+\pdfpcnote{
+  Can rewrite penalty term in quadratic form $\lambda \beta^T \mathbf{\Omega}
+  \beta$.
+}
 
-- Can rewrite penalty term in quadratic form
-  $\lambda \beta^T \mathbf{\Omega} \beta$.
-
-:::
 
 ### Solution
 
-The minimizer is
-$$\hat{\beta} = (\boldsymbol{\Phi}^T \boldsymbol{\Phi} + \lambda \mathbf{\Omega})^{-1}\boldsymbol{\Phi}^T \mathbf{y}$$
 
-. . .
-
-with resulting smoother
-
-$$
-\hat{\mathbf{f}} = \underbrace{\boldsymbol{\Phi} (\boldsymbol{\Phi}^T \boldsymbol{\Phi} + \lambda \mathbf{\Omega})^{-1}\boldsymbol{\Phi}^T}_{\mathbf{S}_{\lambda}} \mathbf{y}.
-$$
-
-. . .
+\pause\medskip
 
 We recognize this as a _linear smoother_ with smoother matrix
 $\mathbf{S}_{\lambda}$.
 
-::: {.notes}
-
-- Similar to ridge (Tikhonov) regression: OLS + squared l2 penalty.
-
-:::
+\pdfpcnote{
+  Similar to ridge (Tikhonov) regression: OLS + squared l2 penalty.
+}
 
 ## Splines in R
 
@@ -505,12 +473,10 @@ b_splines <- splineDesign(knots, xx)
 matplot(xx, b_splines, type = "l", lty = 1)
 ```
 
-::: {.notes}
-
-- Repeated knots at boundaries are necessary to ensure function goes throgh
-  control points and is smooth.
-
-:::
+\pdfpcnote{
+Repeated knots at boundaries are necessary to ensure function goes throgh
+control points and is smooth.
+}
 
 ## Penalty Matrix
 
@@ -534,7 +500,8 @@ pen_mat <- function(inner_knots) {
 
 ::: {.column width="47%"}
 
-```{r Omega-Simpson2, eval=FALSE}
+```{r Omega-Simpson2}
+#| eval: false
 omega <- pen_mat(seq(0, 1, 0.1))
 
 image(Matrix(omega))
@@ -544,7 +511,9 @@ image(Matrix(omega))
 
 ::: {.column width="47%"}
 
-```{r Omega-Simpson3, echo=FALSE, ref.label="Omega-Simpson2"}
+```{r Omega-Simpson3}
+#| ref-label: Omega-Simpson2
+#| echo: false
 
 ```
 
@@ -554,12 +523,13 @@ image(Matrix(omega))
 
 . . .
 
-^[See [slide source](/lecture4.Rmd) for implementation of `pen_mat()`.]
+See [slide source](/slides/lecture4.qmd) for implementation
+of `pen_mat()`.
 
 ## Fitting a Smoothing Spline
 
-We implement the matrix-algebra directly for computing
-$\mathbf{S}_{\lambda} \mathbf{y}$.
+We implement the matrix-algebra directly for computing $\mathbf{S}_{\lambda}
+\mathbf{y}$.
 
 ```{r nuuk-smooth-spline}
 inner_knots <- nuuk_year$Year
@@ -584,7 +554,7 @@ smoother <- function(lambda) {
 ```
 
 ```{r nuuk-smoother-plot, fig.width = 10, fig.height = 6}
-p +
+nuuk_plot +
   geom_line(aes(y = smoother(10)), color = "steelblue4") + # Undersmooth
   geom_line(aes(y = smoother(1000)), color = "red") + # Smooth
   geom_line(aes(y = smoother(100000)), color = "orange") # Oversmooth
@@ -592,8 +562,8 @@ p +
 
 ## Generalized Cross-Validation
 
-With $\mathrm{df} = \mathrm{trace}(\mathbf{S}) = \sum_{i=1}^n S_{ii}$ we replace
-$S_{ii}$ in LOOCV by $\mathrm{df} / n$ to get the **generalized**
+With $\mathrm{df} = \mathrm{trace}(\mathbf{S}) = \sum_{i=1}^n S_{ii}$ we
+replace $S_{ii}$ in LOOCV by $\mathrm{df} / n$ to get the **generalized**
 cross-validation criterion
 $$\mathrm{GCV} = \sum_{i=1}^n \left(\frac{y_i - \hat{f}_i}{1 - \mathrm{df} / n}\right)^2.$$
 --
@@ -632,14 +602,14 @@ tibble(lambda, gcv) |>
 
 ```{r nuuk-spline-opt, fig.width = 9, fig.height = 5}
 smooth_opt <- smoother(lambda_opt)
-p + geom_line(aes(y = smooth_opt), color = "blue")
+nuuk_plot + geom_line(aes(y = smooth_opt), color = "blue")
 ```
 
 ### Using `smooth.spline()`
 
 ```{r nuuk-spline-opt2, fig.width = 9, fig.height = 5}
 smooth <- smooth.spline(nuuk_year$Year, nuuk_year$Temperature, all.knots = TRUE)
-p + geom_line(aes(y = smooth$y), color = "blue")
+nuuk_plot + geom_line(aes(y = smooth$y), color = "blue")
 ```
 
 ::: {.notes}
@@ -652,32 +622,41 @@ p + geom_line(aes(y = smooth$y), color = "blue")
 
 In practice we use $p < n$ basis functions.
 
-Using the singular value decomposition $$\Phi = \mathbf{U} D \mathbf{V}^T$$ --
-
+Using the singular value decomposition
+$$
+  \Phi = \mathbf{U} D \mathbf{V}^T
+$$
 it holds that
-$$\mathbf{S}_{\lambda} = \widetilde{\mathbf{U}}  (I + \lambda  \Gamma)^{-1} \widetilde{\mathbf{U}}^T$$
+$$
+  \mathbf{S}_{\lambda} = \widetilde{\mathbf{U}}  (I + \lambda  \Gamma)^{-1} \widetilde{\mathbf{U}}^T
+$$
 where $\widetilde{\mathbf{U}} = \mathbf{U} \mathbf{W}$ and
-$$D^{-1} \mathbf{V}^T \mathbf{\Omega} \mathbf{V} D^{-1} = \mathbf{W} \Gamma \mathbf{W}^T.$$
+$$
+  D^{-1} \mathbf{V}^T \mathbf{\Omega} \mathbf{V} D^{-1} = \mathbf{W} \Gamma \mathbf{W}^T.
+$$
 
-::: {.notes}
-
+\pdfpcnote{
 - Can be done whether we use all or a subset of our basis functions
 - $S_\lambda$ is diagonalized
 - DERIVE $\mathbf{S}_\lambda$ ON BLACKBOARD!
-
-:::
+}
 
 ### Interpretation
 
-- The coefficients, $\hat{\beta} = \widetilde{\mathbf{U}}^Ty$, are computed for
-  expanding $y$ in the basis given by the columns of $\widetilde{\mathbf{U}}$.
-  --
+The coefficients, $\hat{\beta} = \widetilde{\mathbf{U}}^Ty$, are computed for
+expanding $y$ in the basis given by the columns of $\widetilde{\mathbf{U}}$.
 
-- The $i$-th coefficient is shrunk towards 0,
-  $$\hat{\beta}_i(\lambda) = \frac{\hat{\beta}_i}{1 + \lambda \gamma_i}.$$ --
+\pause\medskip
 
-- The smoothed values, $\widetilde{\mathbf{U}} \hat{\beta}(\lambda)$, are
-  computed as an expansion using the shrunken coefficients.
+The $i$-th coefficient is shrunk towards 0,
+$$\hat{\beta}_i(\lambda) =
+\frac{\hat{\beta}_i}{1 + \lambda \gamma_i}.$$
+--
+
+\pause\medskip
+
+The smoothed values, $\widetilde{\mathbf{U}} \hat{\beta}(\lambda)$, are computed
+as an expansion using the shrunken coefficients.
 
 ### The Demmler-Reinsch Basis (Columns of $\widetilde{\mathbf{U}}$)
 
@@ -700,9 +679,9 @@ omega_tilde <- t(
 omega_tilde_svd <- svd(omega_tilde)
 u_tilde <- phi_svd$u %*% omega_tilde_svd$u
 
-colnames(u_tilde) <- paste(rep("u", 20), 1:20, sep = "")
-bind_cols(select(nuuk_year, Year), as_tibble(u_tilde)) %>%
-  gather(key = "term", value = "value", -Year, factor_key = TRUE) %>%
+colnames(u_tilde) <- paste0(rep("u", 20), 1:20)
+bind_cols(select(nuuk_year, Year), as_tibble(u_tilde)) |>
+  gather(key = "term", value = "value", -Year, factor_key = TRUE) |>
   ggplot(aes(Year, value, color = term)) +
   geom_line() +
   facet_wrap(~term) +
@@ -712,7 +691,10 @@ bind_cols(select(nuuk_year, Year), as_tibble(u_tilde)) %>%
 
 ### The Eigenvalues $\gamma_i$
 
-```{r spline-gamma, echo=FALSE, fig.height = 7, fig.width = 10}
+```{r spline-gamma}
+#| echo: false
+#| fig-width: 5.5
+#| fig-height: 3.5
 library(patchwork)
 
 d <- omega_tilde_svd$d
@@ -732,14 +714,15 @@ p1 / p2
 
 ## A LOESS Smoother
 
-LOESS: locally weighted scatterplot smoothing
+LOESS: locally weighted scatterplot smoothing^[Default behavior in ggplot2 is to
+use LOESS for small data sets and generalized additive models (GAMs) for larger
+data sets.]
 
-```{r loess, fig.height=4, fig.width = 10}
-p + geom_smooth()
+```{r loess}
+#| fig-width: 5
+#| fig-heigth: 3
+nuuk_plot + geom_smooth()
 ```
-
-^[Default behavior in ggplot2 is to use LOESS for small data sets and
-generalized additive models (GAMs) for larger data sets.]
 
 ## LOESS
 
@@ -759,37 +742,37 @@ insensitive to outliers.
 ## Another LOESS Smoother
 
 ```{r loess2, fig.height = 5, fig.width = 10}
-p + geom_smooth(method = "loess", span = 0.5)
+nuuk_plot + geom_smooth(method = "loess", span = 0.5)
 ```
 
 ## A Linear "Smoother"
 
 ```{r linear-smoother, fig.height = 5, fig.width = 10}
-p + geom_smooth(method = "lm")
+nuuk_plot + geom_smooth(method = "lm")
 ```
 
 ## A Polynomial Smoother
 
 ```{r poly-smoother, fig.height = 5, fig.width = 10}
-p + geom_smooth(method = "lm", formula = y ~ poly(x, 5))
+nuuk_plot + geom_smooth(method = "lm", formula = y ~ poly(x, 5))
 ```
 
 ## Another Polynomial Smoother
 
 ```{r poly-smother2, fig.height = 5, fig.width = 10}
-p + geom_smooth(method = "lm", formula = y ~ poly(x, 20))
+nuuk_plot + geom_smooth(method = "lm", formula = y ~ poly(x, 20))
 ```
 
 ## A Spline Smoother
 
 ```{r spline-smoother, fig.height = 5, fig.width = 10}
-p + geom_smooth(method = "gam", formula = y ~ s(x))
+nuuk_plot + geom_smooth(method = "gam", formula = y ~ s(x))
 ```
 
 ## Another Spline Smoother
 
 ```{r spline-smoother2, fig.height = 5, fig.width = 10}
-p + geom_smooth(method = "gam", formula = y ~ s(x, k = 100))
+nuuk_plot + geom_smooth(method = "gam", formula = y ~ s(x, k = 100))
 ```
 
 ## Smoothing with ggplot2
@@ -797,12 +780,12 @@ p + geom_smooth(method = "gam", formula = y ~ s(x, k = 100))
 The `geom_smooth()` function easily adds miscellaneous model fits or scatter
 plot smoothers to the scatter plot.
 
-. . .
+\pause\medskip
 
 Spline smoothing is performed via the `gam()` function in the mgcv package,
 whereas loess smoothing is via the `loess()` function in the stats package.
 
-. . .
+\pause\medskip
 
 Any "smoother" can be used that supports a formula interface and has a
 prediction function adhering to the standards of `predict.lm()`.
@@ -839,13 +822,13 @@ predict.running_mean <- function(object, newdata, ...) {
 ## A Running Mean
 
 ```{r, warning=FALSE, fig.height=5, fig.width = 10}
-p + geom_smooth(method = "running_mean", se = FALSE, n = 200)
+nuuk_plot + geom_smooth(method = "running_mean", se = FALSE, n = 200)
 ```
 
 ## Specifying Arguments to Our Method
 
 ```{r, warning=FALSE, fig.height=4, fig.width = 10}
-p +
+nuuk_plot +
   geom_smooth(
     method = "running_mean",
     se = FALSE,
@@ -880,19 +863,27 @@ running_mean <- function(..., data, k = 5, boundary = NULL) {
 
 ### No Boundary Adjustment
 
-```{r, warning=FALSE, echo = FALSE, message=FALSE, fig.height = 5, fig.width = 10}
+```{r}
+#| warning: false
+#| echo: false
+#| fig-width: 5
+#| fig-height: 3
 smooth1 <- geom_smooth(
   method = "running_mean",
   se = FALSE,
   n = 200,
   method.args = list(k = 13)
 )
-p + smooth1
+nuuk_plot + smooth1
 ```
 
 ### Padding
 
-```{r, warning=FALSE, echo = FALSE, message=FALSE, fig.height = 5, fig.width = 10}
+```{r}
+#| warning: false
+#| echo: false
+#| fig-width: 5
+#| fig-height: 3
 smooth2 <- geom_smooth(
   method = "running_mean",
   se = FALSE,
@@ -900,12 +891,16 @@ smooth2 <- geom_smooth(
   method.args = list(k = 13, boundary = "pad"),
   color = "red"
 )
-p + smooth2 + smooth1
+nuuk_plot + smooth2 + smooth1
 ```
 
 ### Reversion
 
-```{r, warning=FALSE, echo = FALSE, message=FALSE, fig.height = 5, fig.width = 10}
+```{r}
+#| warning: false
+#| echo: false
+#| fig-width: 5
+#| fig-height: 3
 smooth3 <- geom_smooth(
   method = "running_mean",
   se = FALSE,
@@ -913,5 +908,57 @@ smooth3 <- geom_smooth(
   method.args = list(k = 13, boundary = "rev"),
   color = "purple"
 )
-p + smooth3 + smooth2 + smooth1
+nuuk_plot + smooth3 + smooth2 + smooth1
+```
+
+# Exercises
+
+## Exercise
+
+$\mathbf{S}$ is a sparse matrix but it is stored in a dense format currently.
+
+**Note:** The following is **not** the real $\mathbf{S}$. It is just used for
+illustration.
+
+```{r ex-sparse}
+#| warning: false
+k <- 11
+y <- rnorm(n)
+w <- c(rep(1, k * n), rep(0, n * (n - k)))
+S <- matrix(w, n, n, byrow = TRUE)
+```
+
+Use the [Matrix
+package](https://CRAN.R-project.org/package=Matrix) to
+convert $\mathbf{S}$ to a sparse format using `Matrix::Matrix(S, sparse = TRUE)`
+and then benchmark the sparse multiplication against the dense one. Parameterize
+the benchmark with $n$ and $k$.
+
+\pause\medskip
+
+Don't include the time used to construct the matrix in the benchmark.
+
+```{r ex-sparse-result}
+#| echo: false
+#| message: false
+#| warning: false
+#| fig-width: 5.5
+sparse_bench <- bench::press(
+  n = c(512, 1024, 4196),
+  k = c(10, 100),
+  {
+    k <- 11
+    y <- rnorm(n)
+    w <- c(rep(1, k * n), rep(0, n * (n - k)))
+    S <- matrix(w, n, n, byrow = TRUE)
+    S_sparse <- Matrix::Matrix(S, sparse = TRUE)
+    bench::mark(
+      S %*% y,
+      S_sparse %*% y,
+      check = FALSE
+    )
+  }
+)
+
+plot(sparse_bench)
 ```
